# SynthCareAI

./: .gitignore  LocalMedStorreBooking.py  README.md  config_8b.py  demo_8b.py  document_processor.py  llama_8b_integration.py  main_8b.py  medical_rag_gpu.py  medstore.html  requirements_gpu.txt  retrieval_system.py  run.py  setup_8b.py  vector_database_gpu.py
backend/: README.md
backend/core_api/: main.py  pdf_service.py
backend/rag_agent/: agent.py  brain.py  vector_store.py
frontend/: ui.py
frontend/my-app/: index.html  package-lock.json  package.json
frontend/synthcare-frontend/: index.html  package.json  tailwind.config.js
frontend/synthcare-frontend_fixed/: .env.example  package-lock.json
hospital-ai-system/: .env.example  .gitignore  README.md  create_sample_ehr.py  docker-compose.yml  main.py  pyproject.toml
hospital-ai-system/app/: main.py
hospital-ai-system/app/agents/: appointment_agent.py  crew.py  direct_chat.py  emergency_agent.py  medical_qa.py  medicine_agent.py  triage_agent.py
hospital-ai-system/app/api/: routes.py
hospital-ai-system/app/config/: settings.py
hospital-ai-system/app/core/: celery_app.py  llm_provider.py  logger.py  redis_client.py
hospital-ai-system/app/db/: database.py  models.py
hospital-ai-system/app/rag/: embeddings.py  ingestion.py  qdrant_client.py  retriever.py
hospital-ai-system/app/telegram/: bot.py  memory.py
hospital-ai-system/app/tools/: appointment_booking.py  db_query.py  emergency_alert.py  medicine_ordering.py  prescription_parser.py  rag_search.py
qdrant_db/: meta.json
(+32 files in other folders)
