[project]
name = "hospital-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "crewai>=1.9.3",
    "fastapi>=0.133.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-docling>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.83.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=21.0",
    "qdrant-client>=1.17.0",
    "redis>=7.2.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",

    "uvicorn>=0.41.0",
]
